# School

./: README.md
Bank Software 6-7-22 ~ Java/: Changelog.txt  Dashboard.java  Transactions.java  main.java
Bank Software 6-7-22 ~ Java/src/main/java/: Login.java  Stocks.java
Bank Software ~ Java/: Accounts.json  Changelog.txt
Bank Software ~ Java/src/main/java/: Loan.java  Main.java  readAccounts.java  stockMarket.java
Basic Websites ~ HTML/Blog/: README.md  about.html  contact.html  index.html  style.css
Basic Websites ~ HTML/Everyday Carry Lab/: index.liquid  keys.md  package.json  phone.md  wallet.md
Basic Websites ~ HTML/Everyday Carry Lab/_includes/: layout.liquid
Basic Websites ~ HTML/Everyday Carry Lab/styles/: screen.css
Basic Websites ~ HTML/Framework Challenge/: index.html  screen.css
CSE 232 2024 ~ C++/CSE 232 Homework 10/: CSE 232 Homework 10.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 11/: CSE 232 Homework 11.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 12/: CSE 232 Homework 12.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 13/: CSE 232 Homework 13.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 2/: CSE 232 Homework 2.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 3/: CSE 232 Homework 3.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 4/: CSE 232 Homework 4.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 5/: CSE 232 Homework 5.cpp  WordList.h
CSE 232 2024 ~ C++/CSE 232 Homework 6/: CSE 232 Homework 6.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 7/: CSE 232 Homework 7.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 8/: CSE 232 Homework 8.cpp
CSE 232 2024 ~ C++/CSE 232 Homework 9/: CSE 232 Homework 9.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 1/: CSE 232 Lab 1.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 10/: CSE 232 Lab 10.cpp  singlelink.hpp
CSE 232 2024 ~ C++/CSE 232 Lab 11/: CSE 232 Lab 11.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 12/: CSE 232 Lab 12.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 2/: CSE 232 Lab 2.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 4/: CSE 232 Lab 4.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 7/: CSE 232 Lab 7.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 8/: CSE 232 Lab 8.cpp
CSE 232 2024 ~ C++/CSE 232 Lab 9/: CSE 232 Lab 9.cpp
Fitness App ~ Java/: settings.gradle.kts
Fitness App ~ Java/app/: build.gradle.kts
Fitness App ~ Java/app/manifests/: AndroidManifest.xml
Fitness App ~ Java/app/src/main/: AndroidManifest.xml
Fitness App ~ Java/gradle/wrapper/: gradle-wrapper.properties
Hangman 5-10-21 ~ Python/: Choice_Game_3.1.2D__Hangman.py
Hangman ~ Python/: Choice_Game_3.1.2D__Hangman.py
Largest Monotonic Island 12-05-24 ~ Dafny/: project.dfy
Largest Monotonic Island ~ Dafny/: project.dfy
Rock Paper Scissors 10-08-21 ~ Python/: Rock_Paper_Scissors.py
Rock Paper Scissors ~ Python/: Rock_Paper_Scissors.py
Space Adventure 5-24-21 ~ Python/: Changelog.txt  Space_Adventure.py
Space Adventure ~ Python/: Changelog.txt  Space_Adventure.py
Spartanmind ~ C++/: CMakeLists.txt  Doxyfile.doxy  Spartanmind.cpp  Spartanmind.h  main.cpp  pch.h
Spartanmind ~ C++/SpartanmindLib/: Background.cpp  Background.h  CMakeLists.txt  ChestFullTextPopup.cpp  ChestFullTextPopup.h  Container.cpp  Container.h  ContainerAddLetterVisitor.cpp  ContainerAddLetterVisitor.h  ContainerHeadButtVisitor.cpp  ContainerHeadButtVisitor.h  ContainerOpenVisitor.cpp  ContainerOpenVisitor.h  EndPopupVisitor.cpp  EndPopupVisitor.h  EndTextPopup.cpp  EndTextPopup.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Given.cpp  Given.h  GivenValueVisitior.cpp  GivenValueVisitior.h  InvisibleAnswer.cpp  InvisibleAnswer.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Letter.cpp  Letter.h  LetterCoordVisitor.cpp  LetterCoordVisitor.h  LetterInTrayDrawer.cpp  LetterInTrayDrawer.h  LetterPickerUpperVisitor.cpp  LetterPickerUpperVisitor.h  LetterSolverVisitor.cpp  (+41 more)
Spartanmind ~ C++/Tests/: CMakeLists.txt  ContainerTest.cpp  GameTest.cpp  InvisibleAnswerTest.cpp  ItemTest.cpp  LoaderTest.cpp  TrayTest.cpp  gtest_main.cpp
Spartanmind ~ C++/levels/: level0.xml  level1.xml  level2.xml  level3.xml
WholeNotes ~ Java/app/: build.gradle.kts
WholeNotes ~ Java/app/src/main/: AndroidManifest.xml
WholeNotes ~ Java/gradle/wrapper/: gradle-wrapper.properties
Wordle 2-17-22 ~ Java/: Changelog.txt  Main.java
Wordle 2-17-22 ~ Java/src/main/java/: WordList.java
Wordle ~ Java/: Changelog.txt
(+56 files in other folders)
